record-shop/main/default/objects/Record__c/Record__c.object-meta.xml
<CustomObject>
    <description>Album, single or EP (Extended Play).</description>
    <label>Record</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>