record-shop/main/default/objects/Record__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <description>Singer, composer or band.</description>
    <label>Artist</label>
    <length>80</length>
    <type>Text</type>
</CustomField>