record-shop/main/default/objects/Record__c/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <description>URL to get access to the record&apos;s cover.</description>
    <label>Cover</label>
    <type>Url</type>
</CustomField>