record-shop/main/default/objects/Record__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of likes for this record.</description>
    <label>Likes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>