record-shop/main/default/objects/Record__c/fields/Listening__c.field-meta.xml
<CustomField>
    <fullName>Listening__c</fullName>
    <description>URL to access to an extract of the record.</description>
    <label>Listening</label>
    <type>Url</type>
</CustomField>