record-shop/main/default/objects/Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Artist__c</columns>
    <columns>Year__c</columns>
    <columns>Likes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>